--- a/JS/Mon dossier/08-DOM/TP-2/index.html
+++ b/JS/Mon dossier/08-DOM/TP-2/index.html
@@ -9,30 +9,27 @@
 <body>
   <main>
     <h1>Calculator3000</h1>
-    <div id="screen">
-      <p></p>
-      p
-    </div>
-    <div id="touche">
-      <button id="c">C</button>
-      <button id="left">(</button>
-      <button id="right">)</button>
-      <button id="slash">/</button>
-      <button id="sept">7</button>
-      <button id="huit">8</button>
-      <button id="neuf">9</button>
-      <button id="star">*</button>
-      <button id="cat">4</button>
-      <button id="cinq">5</button>
-      <button id="six">6</button>
-      <button id="moins">-</button>
-      <button id="un">1</button>
-      <button id="deux">2</button>
-      <button id="trois">3</button>
-      <button id="plus">+</button>
-      <button id="zero">0</button>
-      <button id="dot">.</button>
-      <button id="egal">=</button>
+    <div class="screen"></div>
+    <div class="touches">
+      <button data-key="KeyC" class="bouton" id="c">C</button>
+      <button data-key="Digit5" class="bouton" id="left">(</button>
+      <button data-key="Minus" class="bouton" id="right">)</button>
+      <button data-key="NumpadDivide" class="bouton" id="slash">/</button>
+      <button data-key="Numpad7" class="bouton" id="sept">7</button>
+      <button data-key="Numpad8" class="bouton" id="huit">8</button>
+      <button data-key="Numpad9" class="bouton" id="neuf">9</button>
+      <button data-key="NumpadMultiply" class="bouton" id="star">*</button>
+      <button data-key="Numpad4" class="bouton" id="cat">4</button>
+      <button data-key="Numpad5" class="bouton" id="cinq">5</button>
+      <button data-key="Numpad6" class="bouton" id="six">6</button>
+      <button data-key="NumpadSubtract" class="bouton" id="moins">-</button>
+      <button data-key="Numpad1" class="bouton" id="un">1</button>
+      <button data-key="Numpad2" class="bouton" id="deux">2</button>
+      <button data-key="Numpad3" class="bouton" id="trois">3</button>
+      <button data-key="NumpadAdd" class="bouton" id="plus">+</button>
+      <button data-key="Numpad0" class="bouton" id="zero">0</button>
+      <button data-key="NumpadDecimal" class="bouton" id="dot">.</button>
+      <button data-key="Enter" class="bouton" id="egal">=</button>
     </div>
   </main>
 </body>
