--- a/JS/Mon dossier/10-Classes/Exo5/index.html
+++ b/JS/Mon dossier/10-Classes/Exo5/index.html
@@ -6,7 +6,18 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <h3>Exercice 5</h3>
+  <hr>
+  <div>
+    <select name="fruit" id="fruit">
+      <option value="">Séléctionner un fruit...</option>
+    </select>
+  </div>
+  <input type="number" min="0" max="200" step="1" id="nbFruit">
+  <button id="ajouterAuPanier">Ajouter au Panier</button>
+  <button id="voirMonPanier">Voir mon Panier</button>
+  <button id="valider">Valider mon Panier</button>
+  <div id="account-display"></div>
 </body>
 <script defer  type="module" src="./Modules/main.js"></script>
 </html>
