--- a/JS/Repo/recap-dom/.exercices/04-pokemon/index.html
+++ b/JS/Repo/recap-dom/.exercices/04-pokemon/index.html
@@ -13,7 +13,7 @@
       <hr />
       <div>
         <select id="generation">
-          <option value="">Select a Region...</option>
+          <option value="">Select a Generation...</option>
           <!-- Peupler ce select avec les régions disponibles dans l'API (Hoenn, Kanto, ...) -->
         </select>
         <select id="pokemon-name">
