--- a/JS/Repo/recap-dom/.exercices/05-todo-api/index.html
+++ b/JS/Repo/recap-dom/.exercices/05-todo-api/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recap - XXX</title>
+    <title>TodoList</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <script type="module" src="./assets/js/main.js"></script>
 </head>
 <body>
-    
+    <h1>Exercice 05 - ToDoListe</h1>
+    <hr>
+    <label for="task-content">Texte: </label>
+    <textarea id="task-content" cols="30" rows="10"></textarea>
+    <label for="inputDate">Date d'échéance</label>
+    <input type="date" id="inputDate">
+    <button id="addTask">Validez la Task</button>
+    <hr>
+    <ul id="taskDisplay"></ul>
 </body>
 </html>
